--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  width: 40%;
+  width: 350px;
   margin: 2em auto;
   background-color: #394049;
   border-radius: 5px;
@@ -57,4 +57,48 @@ input[type="submit"] {
   border-radius: 5px;
   padding: 1em;
   cursor: pointer;
+}
+
+.list-todo {
+  padding: 0 1em 2em;
+  margin: 1em 2em;
+}
+
+.list-todo h2 {
+  margin-bottom: 0;
+}
+
+.list-todo p {
+  text-align: center;
+}
+
+.toDo {
+  border-bottom: 1px solid #444;
+}
+
+.toDo h3 {
+  margin-bottom: 0.5em;
+}
+
+.toDo-done {
+  text-decoration: line-through;
+  color: rgb(240 98 146);
+}
+
+.toDo p {
+  text-align: left;
+  font-style: italic;
+  font-size: 0.7em;
+  margin-bottom: 1.5em;
+}
+
+.toDo svg {
+  font-size: 1.2em;
+  cursor: pointer;
+  margin-right: 1em;
+  transition: 0.5s;
+}
+
+.toDo svg:hover {
+  color: rgb(240 98 146);
 }
